poprawki po zmianie nazwy, rezygnacja z auto increment w postgre

--- a/ecoplastol/ecoplastol.csproj
+++ b/ecoplastol/ecoplastol.csproj
@@ -152,7 +152,7 @@
       <DependentUpon>frmWyroby.xaml</DependentUpon>
     </Compile>
     <Compile Include="frmWyroby_db.cs" />
-    <Compile Include="kod25.cs" />
+    <Compile Include="kodITF.cs" />
     <Compile Include="kodTrace.cs" />
     <Compile Include="PGEntity.Context.cs">
       <AutoGen>True</AutoGen>
